--- a/src/schema/objects/entities.yaml
+++ b/src/schema/objects/entities.yaml
@@ -8,7 +8,7 @@ acquisition:
   display_name: Acquisition
   description: |
     The `acq-<label>` entity corresponds to a custom label the user MAY use to distinguish
-    a different set of parameters or devices used for acquiring the same modality.
+    a different set of parameters used for acquiring the same modality.
 
     For example, this should be used when a study includes two T1w images -
     one full brain low resolution and one restricted field of view but high resolution.
@@ -24,12 +24,6 @@ acquisition:
     (for example, just between `RARE` and `FLASH`, or between `RARE`, `FLASH`, and `FLASHsubsampled`)
     remains at the discretion of the researcher.
 
-    For modalities where multiple recording devices may be in use simultaneously
-    (and may each record into different data files with different recording parameters),
-    the `acq-<label>` entity may also be used.
-    For example, an EMG dataset with simultaneous recordings from a bipolar sensor and an
-    electrode grid could have the following names:
-    `sub-01_acq-bipolar_emg.bdf` and `sub-01_acq-grid_emg.bdf`.
   type: string
   format: label
 ceagent:
@@ -250,7 +244,7 @@ recording:
   description: |
     The `recording-<label>` entity can be used to distinguish continuous recording files.
 
-    This entity is commonly applied when continuous recordings have different sampling frequencies or start times.
+    This entity is commonly applied when continuous recordings are from different acquisition instruments, or have different sampling frequencies or start times.
     For example, physiological recordings with different sampling frequencies may be distinguished using
     labels like `recording-100Hz` and `recording-500Hz`.
   type: string
