fix(schema): Quote task in events association

--- a/src/schema/meta/associations.yaml
+++ b/src/schema/meta/associations.yaml
@@ -14,7 +14,7 @@
 ---
 events:
   selectors:
-    - 'task in entities'
+    - '"task" in entities'
     - extension != '.json'
   target:
     suffix: events
