Add 1PE to complement 2PE
https://blog.biodock.ai/one-vs-two-photon-microscopy/ seems to provide a nice comparison
between one- and two-photon microscopy. Also
https://www.gophotonics.com/community/what-are-single-photon-and-two-photon-excitation
provides another comparison and uses "excitation" consistently between them.

Note that there is also already "FLUO" suffix for "Fluorescence microscopy" in general,
of which both 1PE and 2PE and likely MPE (multi-photon) mechanisms are, so unclear when
FLUO to be used, but I guess 2PE, MPE and now 1PE should be RECOMMENDED to be used
in favor of FLUO as more specific

--- a/src/schema/objects/suffixes.yaml
+++ b/src/schema/objects/suffixes.yaml
@@ -1,6 +1,11 @@
 ---
 # This file defines valid BIDS file suffixes.
 # For rules regarding how suffixes relate to datatypes, see files in `rules/files/raw/`.
+OnePE:
+  value: 1PE
+  display_name: 1-photon excitation microscopy
+  description: |
+    1-photon excitation microscopy imaging data
 TwoPE:
   value: 2PE
   display_name: 2-photon excitation microscopy
