--- a/src/schema/objects/metadata.yaml
+++ b/src/schema/objects/metadata.yaml
@@ -3753,7 +3753,7 @@ TaskName:
   description: |
     Name of the task.
     No two tasks should have the same name.
-    The task label included in the filename is derived from this `"TaskName"` field
+    The task label included in the filename MAY be derived from this `"TaskName"` field
     by removing all non-alphanumeric or `+` characters (that is, all except those matching `[0-9a-zA-Z+]`),
     and potentially replacing spaces with `+` to ease readability.
     For example `"TaskName"` `"faces n-back"` or `"head nodding"` could correspond to task labels
