Avoid e.g. and point to this PR for more information
Co-authored-by: Chris Markiewicz <effigies@gmail.com>

--- a/src/schema/rules/entities.yaml
+++ b/src/schema/rules/entities.yaml
@@ -32,6 +32,7 @@
 - density
 - label
 # NOTE: there is a current convention to keep description to be the last entity.
-# If to be changed - potentially might need to adjust text, e.g. now in
+# If to be changed - potentially might need to adjust text in
 # src/derivatives/common-data-types.md
+# See https://github.com/bids-standard/bids-specification/pull/1915
 - description
