Fix schema column descriptions and clarify events requirements
Based on review feedback:
- Update HED column: 'HED Tag' → 'HED' display name, 'Tag' → 'tags' in description
- Fix stim_file path: /stimuli → /stimuli/ to prevent line breaks
- Add comma after 'sequence has started' for clarity
- Clarify events file requirements: 'at least one corresponding data file'
- Better explain inheritance principle for events files

--- a/src/schema/objects/columns.yaml
+++ b/src/schema/objects/columns.yaml
@@ -1,9 +1,9 @@
 ---
 HED:
   name: HED
-  display_name: HED Tag
+  display_name: HED
   description: |
-    Hierarchical Event Descriptor (HED) Tag.
+    Hierarchical Event Descriptor (HED) tags.
     See the [HED Appendix](SPEC_ROOT/appendices/hed.md) for details.
   type: string
 abbreviation:
@@ -582,7 +582,7 @@ stim_file:
     Represents the location of the stimulus file (such as an image, video, or
     audio file) presented at the given onset time.
     There are no restrictions on the file formats of the stimuli files,
-    but they should be stored in the `/stimuli` directory
+    but they should be stored in the `/stimuli/` directory
     (under the root directory of the dataset; with optional subdirectories).
     The values under the `stim_file` column correspond to a path relative to
     `/stimuli`.
