schema: Factor out common PET and MRS entities

--- a/src/schema/meta/templates.yaml
+++ b/src/schema/meta/templates.yaml
@@ -41,6 +41,22 @@ raw:
       direction: optional
       part: optional
 
+  pet:
+    entities:
+      $ref: meta.templates.raw.base.entities
+      task: optional
+      tracer: optional
+      reconstruction: optional
+      run: optional
+
+  mrs:
+    entities:
+      $ref: meta.templates.raw.recording.entities
+      task: optional
+      nucleus: optional
+      volume: optional
+      reconstruction: optional
+
 # Entities that apply to most derivative files
 # Include thus:
 #
