--- a/src/schema/rules/files/raw/pet.yaml
+++ b/src/schema/rules/files/raw/pet.yaml
@@ -9,11 +9,7 @@ pet:
   datatypes:
     - pet
   entities:
-    $ref: meta.templates.raw.base.entities
-    task: optional
-    tracer: optional
-    reconstruction: optional
-    run: optional
+    $ref: meta.templates.raw.pet.entities
 
 blood:
   suffixes:
@@ -24,9 +20,5 @@ blood:
   datatypes:
     - pet
   entities:
-    $ref: meta.templates.raw.base.entities
-    task: optional
-    tracer: optional
-    reconstruction: optional
-    run: optional
+    $ref: meta.templates.raw.pet.entities
     recording: required
